--- a/templates/index.html
+++ b/templates/index.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="garden,virtual,ar,vr,plant,tree">
 
   <!-- Favicons -->
-  <link href="static/assets/img/favicon.png" rel="icon">
-  <link href="static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="static/assets/img/favicon.webp" rel="icon">
+  <link href="static/assets/img/apple-touch-icon.webp" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
