--- a/templates/main_home.html
+++ b/templates/main_home.html
@@ -9,8 +9,8 @@
   <meta name="keywords" content="garden,virtual,ar,vr,plant,tree">
 
   <!-- Favicons -->
-  <link href="static/assets/img/favicon.png" rel="icon">
-  <link href="static/assets/img/apple-touch-icon.png" rel="apple-touch-icon">
+  <link href="static/assets/img/favicon.webp" rel="icon">
+  <link href="static/assets/img/apple-touch-icon.webp" rel="apple-touch-icon">
 
   <!-- Fonts -->
   <link href="https://fonts.googleapis.com" rel="preconnect">
@@ -77,7 +77,7 @@
           <img src="static/assets/img/hero-carousel/hero-carousel-1.webp" alt="">
           <div class="carousel-container">
             <h2>Welcome to Virtual Garden<br></h2>
-            <a href="/login" class="btn-get-started">Get Started</a>
+            <a href="/mainpage" class="btn-get-started">Get Started</a>
           </div>
         </div><!-- End Carousel Item -->
 
@@ -85,7 +85,7 @@
           <img src="static/assets/img/hero-carousel/hero-carousel-2.jpg" alt="">
           <div class="carousel-container">
             <h2>Step into a world of greenery and wellness. Explore the wonders of medicinal plants!</h2>
-            <a href="/login" class="btn-get-started">Get Started</a>
+            <a href="/mainpage" class="btn-get-started">Get Started</a>
           </div>
         </div><!-- End Carousel Item -->
 
@@ -93,7 +93,7 @@
           <img src="static/assets/img/hero-carousel/hero-carousel-3.jpeg" alt="">
           <div class="carousel-container">
             <h2>Enter the Virtual Garden and uncover the secrets of medicinal plants that nurture life.</h2>
-            <a href="/login" class="btn-get-started">Get Started</a>
+            <a href="/mainpage" class="btn-get-started">Get Started</a>
           </div>
         </div><!-- End Carousel Item -->
 
